Correct app.core.scss for date page

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -9,7 +9,7 @@
 
 @import "../pages/about/about";
 
-@import "../pages/contact/contact";
+@import "../pages/date/date";
 
 @import "../pages/home/home";
 
