Add Firebase Authentication

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -16,3 +16,7 @@
 @import "../pages/quiz/quiz";
 
 @import "../pages/quiz-result/quiz-result";
+
+@import "../pages/login/login";
+
+@import "../pages/signup/signup";
