--- a/app/pages/map/map.scss
+++ b/app/pages/map/map.scss
@@ -4,3 +4,10 @@
     width: 100%;
     height: 100%;
 }
+#load {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
