--- a/app/pages/login/login.scss
+++ b/app/pages/login/login.scss
@@ -1,3 +1,13 @@
 .login {
 
 }
+#facebookbtn {
+  background-color: #3b5998
+}
+#loadlogin {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
